chests, shelves, pterygota I continued to refactor the code for chests and shelves. I moved the Fireflies and Butterflies into a new modpack called pterygota.

--- a/mods/containers/containers_api/locale/template.txt
+++ b/mods/containers/containers_api/locale/template.txt
@@ -205,7 +205,7 @@ Stick=
 Tin Ingot=
 Tin Lump=
 Locked Chest=
-Locked Chest (owned by @1)=
+(owned by @1)=
 You do not own this chest.=
-a locked chest=
+a locked container=
 Chest=
