stairs I finished refactoring the code for stairs and adding the missing shapes.

--- a/mods/farming/wheat/locale/template.txt
+++ b/mods/farming/wheat/locale/template.txt
@@ -8,3 +8,9 @@ Wheat Seed=
 Wheat=
 Flour=
 Bread=
+Straw Step=
+Inner Straw Step=
+Outer Straw Step=
+Straw Steps=
+Straw Steps Half=
+Straw Steps Slab=
