--- a/mods/steel_bars/locale/template.txt
+++ b/mods/steel_bars/locale/template.txt
@@ -8,3 +8,9 @@ Steel Bar Stair=
 Steel Bar Slab=
 Inner Steel Bar Stair=
 Outer Steel Bar Stair=
+Steel Bar Step=
+Inner Steel Bar Step=
+Outer Steel Bar Step=
+Steel Bar Steps=
+Steel Bar Steps Half=
+Steel Bar Steps Slab=
