--- a/mods/stairs/clay_stairs/locale/template.txt
+++ b/mods/stairs/clay_stairs/locale/template.txt
@@ -3,3 +3,9 @@ Brick Stair=
 Inner Brick Stair=
 Outer Brick Stair=
 Brick Slab=
+Brick Step=
+Inner Brick Step=
+Outer Brick Step=
+Brick Steps=
+Brick Steps Half=
+Brick Steps Slab=
