--- a/mods/stairs/mossy_stairs/locale/template.txt
+++ b/mods/stairs/mossy_stairs/locale/template.txt
@@ -3,3 +3,9 @@ Mossy Cobblestone Stair=
 Inner Mossy Cobblestone Stair=
 Outer Mossy Cobblestone Stair=
 Mossy Cobblestone Slab=
+Mossy Cobblestone Step=
+Inner Mossy Cobblestone Step=
+Outer Mossy Cobblestone Step=
+Mossy Cobblestone Steps=
+Mossy Cobblestone Steps Half=
+Mossy Cobblestone Steps Slab=
